# drf-to-ninja-compiler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
drf_to_ninja/: cli.py
drf_to_ninja/generators/: auth.py  routers.py  schemas.py  urls.py
drf_to_ninja/parsers/: permissions.py  serializers.py  settings.py  urls.py  views.py
tests/: test_compiler.py
tests/example_drf/: advanced_serializers.py  advanced_views.py  ecommerce_serializers.py  ecommerce_urls.py  ecommerce_views.py  serializers.py  settings.py  views.py
