[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-to-ninja"
version = "0.3.0"
description = "An intelligent compiler tool to convert Django Rest Framework code to Django Ninja."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Aristotelis Aslanidis", email = "lektronik@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Framework :: Django",
]
keywords = ["django", "django-ninja", "drf", "migration", "compiler", "ast"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "bandit[toml]>=1.7",
    "pre-commit>=3.0",
]

[project.scripts]
drf2ninja = "drf_to_ninja.cli:main"

[project.urls]
Homepage = "https://github.com/lektronik/drf-to-ninja-compiler"
Repository = "https://github.com/lektronik/drf-to-ninja-compiler"
Issues = "https://github.com/lektronik/drf-to-ninja-compiler/issues"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
